--- a/areaguide.html
+++ b/areaguide.html
@@ -61,7 +61,7 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>The Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
@@ -92,7 +92,7 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>The Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
@@ -124,7 +124,7 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>The Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>The Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
