more mobile friendly on all pages

--- a/areaguide.html
+++ b/areaguide.html
@@ -3,7 +3,6 @@
 <head>
   <title>Living in London</title>
   <link href='assets/css/bootstrap.css' rel='stylesheet'>
-   
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
   <link href='assets/main.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -73,8 +72,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Area Guide</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
 
@@ -104,8 +103,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Area Guide</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
 
@@ -136,8 +135,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Area Guide</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
 
@@ -167,8 +166,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Area Guide</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
   </div>
