--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
-                  <h2>Area Guide</h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs">Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
+                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2> Contact Us </h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -85,21 +85,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
-                  <h2>Area Guide</h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs">Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
+                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2> Contact Us </h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -117,21 +117,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
-                  <h2>Area Guide</h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs">Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
+                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2> Contact Us </h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -148,21 +148,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
-                  <h2>Area Guide</h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs">Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
+                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2> Contact Us </h2>
+                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
                 </a>
               </div>
             </div>
