--- a/areaguide.html
+++ b/areaguide.html
@@ -53,21 +53,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Home</h2>
+                  <h2>Home</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
+                  <h2> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -84,21 +84,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Home</h2>
+                  <h2>Home</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
+                  <h2> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -116,21 +116,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Home</h2>
+                  <h2>Home</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
+                  <h2> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -147,21 +147,21 @@
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Home</h2>
+                  <h2>Home</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs">Important Stuff</h2>        
+                  <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
-                  <h2 class="carousel-title hidden-sm hidden-xs"> Contact Us </h2>
+                  <h2> Contact Us </h2>
                 </a>
               </div>
             </div>
