--- a/areaguide.html
+++ b/areaguide.html
@@ -50,21 +50,21 @@
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
                   <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
@@ -81,21 +81,21 @@
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
                   <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
@@ -113,21 +113,21 @@
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
                   <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
@@ -144,21 +144,21 @@
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="importantstuff.html">
                   <h2>Important Stuff</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
