--- a/importantstuff.html
+++ b/importantstuff.html
@@ -51,21 +51,21 @@
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="index.html">
                   <h2>Home</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
@@ -82,21 +82,21 @@
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="index.html">
                   <h2>Home</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
@@ -114,21 +114,21 @@
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="index.html">
                   <h2>Home</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
@@ -145,21 +145,21 @@
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h>Area Guide</h2>
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
                 <a href="index.html">
                   <h2>Home</h2>        
                 </a>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="greenbutton">
                 <a href="contactus.html">
                   <h2> Contact Us </h2>
