more mobile changes lol

--- a/areaguide.html
+++ b/areaguide.html
@@ -34,7 +34,7 @@
         </div>
   </div>
 
-<div class="container">
+<div class="container hidden-sm hidden-xs">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
   <ol class="carousel-indicators">
