--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="container">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-  <ol class="carousel-indicators">
+  <ol class="carousel-indicators hidden-sm hidden-xs">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
