--- a/areaguide.html
+++ b/areaguide.html
@@ -50,7 +50,7 @@
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
@@ -81,7 +81,7 @@
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
@@ -113,7 +113,7 @@
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
@@ -144,7 +144,7 @@
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="index.html">
                   <h2>Home</h2>
