--- a/importantstuff.html
+++ b/importantstuff.html
@@ -51,7 +51,7 @@
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2>Area Guide</h2>
@@ -82,7 +82,7 @@
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2>Area Guide</h2>
@@ -114,7 +114,7 @@
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h2>Area Guide</h2>
@@ -145,7 +145,7 @@
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
-            <div class="col-sm-4 top-buffer">
+            <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
                 <a href="areaguide.html">
                   <h>Area Guide</h2>
