--- a/areaguide.html
+++ b/areaguide.html
@@ -188,13 +188,10 @@
 
 <div class="container1">
   <img src="testingcat.jpg" alt="Avatar" class="image">
-  <div class="overlay">
+  <div class="overlay1">
     <div class="text">Hello World</div>
   </div>
 </div>
-
-</body>
-</html>
 
 
 <div class="container-fluid">
