--- a/areaguide.html
+++ b/areaguide.html
@@ -188,10 +188,12 @@
 
 <div class="container1">
   <img src="testingcat.jpg" alt="Avatar" class="image">
-  <div class="overlay1">
+  <div class="overlay">
     <div class="text">Hello World</div>
   </div>
 </div>
+
+
 
 
 <div class="container-fluid">
